# klimertrag_2

./: .gitignore  monica_io.py  monica_run_lib.py  pyproject.toml  run_a_few_monicas.cmd  run_a_monica.cmd  run_consumer.py  run_consumer_services.py  run_producer.py  run_producer_services.py  run_setup.cmd  run_setup.sh  sim.json  sim_setups.csv  site.json  start_services.sh
data/: latlon-to-rowcol.json  test_climate.csv
data/germany/: dwd_core_ensemble_rowcol-to-latlon.json
