[tool.poetry]
name = "klimertrag-2"
version = "0.1.0"
description = ""
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pyproj = "^3.6.1"
pyzmq = "^26.0.3"
pycapnp = "^2.0.0"
zalfmas-capnpschemas = { path = "../mas-infrastructure", develop = true }
zalfmas-common = { path = "../mas-infrastructure/src/python/zalfmas-common", develop = true }
zalfmas-services = { path = "../mas-infrastructure/src/python/zalfmas-services", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
